created a webpage for SpLU-2020 and added information, moved 2019 workshop webpage to old_SpLU_workshops

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>SpLU 2019 by   </title>
+<title>SpLU 2020 by   </title>
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link
     href='http://fonts.googleapis.com/css?family=Open+Sans:400,700'
@@ -21,10 +21,14 @@ href="stylesheets/github-light.css" media="screen">
   <body>
 <section class="page-header">
 
-      <h1 class="project-name">SpLU 2019</h1∫>
-      <h2 class="project-tagline"><a href="https://splu-robonlp.github.io">Second International Workshop on Spatial Language Understanding (SpLU) Joined with Grounded Communication for Robotics (RoboNLP)</a></h2>
-<h2  class="project-tagline">In conjunction with The 2019 Annual Conference of the North American Chapter of the Association for Computational Linguistics: Human Language Technologies <a href="http://naacl2019.org">(NAACL-HLT 2019)</a>, June 6, 2019, Minneapolis, USA. 
+      <h1 class="project-name">SpLU 2020</h1>
+      <h2 class="project-tagline">Third International Workshop on Spatial Language Understanding</h2>
+<h2  class="project-tagline">In conjunction with The Conference on Empirical Methods in Natural Language Processing 2020 <a href="http://www.wikicfp.com/cfp/program?id=883">(EMNLP 2020)</a>, November 12/13, 2020, Barceló Bávaro Convention Centre, Dominican Republic. 
 <br>
+<br>
+Room: TBA
+<br>
+<a href="https://aclanthology.info/volumes/proceedings-of-the-third-international-workshop-on-spatial-language-understanding"> (Proceedings)</a>
 </h2>
 <br>
 
@@ -42,7 +46,22 @@ href="stylesheets/github-light.css" media="screen">
             </button>
            
           </div>
-         
+          <div id="navbar" class="navbar-collapse collapse">
+            <ul class="nav navbar-nav">
+              <li class="active"><a href="#topics">Topics</a></a></li>
+        <li><a href="#schedule">Schedule</a></li>
+              <li><a href="#invitedSpeakers">Invited Speakers</a></li>
+	      <li><a href="#submission-info">Submission</a></li>
+         <li><a href="#important-dates">Important Dates</a></li>
+	      <!--li><a href="#demos">Demos</a></li-->
+	      <!--li><a href="#panel">Panel</a></li-->
+	      <!--li><a href="#submission-info">Submission</a></li-->
+	      <li><a href="#organizers">Organizers</a></li>
+         <li><a href="#program-commitee">Program Committee</a></li>
+	 <li><a href="TBA" target="_blank">Childcare</a></li>	
+         </ul>
+            </div><!--/.nav-collapse -->
+        </div><!--/.container-fluid -->
       </nav>
 
 </section>
@@ -50,14 +69,157 @@ href="stylesheets/github-light.css" media="screen">
 
 <section class="main-content">
 
+<h2>Overview</h2>
 
-<a id="pastworkshops" class="anchor" href="#pastworkshops" aria-hidden="true"><span class="octicon octicon-link"></span></a>
-<h2>Past Workshops</h2>
+<p>
+Leveraging the foundation built in the prior workshops SPLU-RoboNLP 2019 and SpLU-2018, run by the organizers Parisa Kordjamshidi and Archna Bhatia (together with Marie-Francine Moens,  James Pustejovsky, James Allen, Bonnie Dorr, Jason Baldridge, Mohit Bansal, Yonatan Bisk, Jesse Thomason and  others),  and  focusing  on  the  gaps  identified  therein,  we  propose  the  third  workshop  on  Spatial Language Understanding.  One of the essential functions of natural language is to express spatial relationships between objects.  Spatial language understanding is useful in many reaserch areas and real-world applications including robotics, navigation, geographic information systems, traffic management, human-machine interaction, query answering and translation systems.  Compared to other semantically specialized linguistic tasks, standardizing tasks related to spatial language seem to be more challenging as  it  is  harder  to  obtain  an  agreeable  set  of  concepts  and  relationships  and  a  formal  spatial  meaning representation that is domain independent and that allows quantitative and qualitative reasoning.
 
-<a href="https://spatial-language.github.io/old_SpLU_workshops/SpLU_2018/"> SpLU 2018</a>
+This has made research results on spatial language learning and reasoning diverse, task-specific and, to some extent, not comparable.  Attempts to arrive at a common set of basic concepts and relationships as well as making existing corpora inter-operable, however, can help avoid duplicated efforts within as well  as  across  fields  and  instead  focus  on  further  developments  in  the  respective  fields  for  automatic learning and reasoning.  Existing qualitative and quantitative representation and reasoning models can be used for investigation of interoperabiltiy of machine learning and reasoning over spatial semantics. Research endeavors in this area could provide insights into many challenges of language understanding in general.  Spatial semantics is also very well-connected and relevant to visualization of natural language and grounding language into perception,  central to dealing with configurations in the physical world and motivating a combination of vision and language for richer spatial understanding.  In the third round of the SpLU workshop, we will focus on the same major topics as:</p> 
 
+<ol>
+
+<li>Spatial languagemeaning representation (continuous, symbolic)</li>
+<li>Spatial language learning</li>
+<li>Spatial language reasoning</li>
+<li>Spatial Language Grounding and Combining vision and language</li>
+<li>Applications of Spatial Language Understanding: QA, dialouge systems, Navigation, etc.</li>
+
+</ol>
+
+<p>
+Spatial  language  meaning  representation  includes  research  related  to  cognitive  and  linguistically motivated  spatial  semantic  representations, spatial  knowledge  representation  and spatial  ontologies, qualitative and quantitative representation models used for formal meaning representation, spatial annotation schemes and efforts for creating specialized corpora.  Spatial language learning considers both symbolic and sub-symbolic (with continious represetnations) techniques and computational models for spatial information extraction,  semantic parsing,  spatial co-reference within a global context that includes discourse and pragmatics from data or formal models. For the reasoning aspect, the workshop emphasizes the role of qualitative and quantitative formal representations in helping spatial reasoning based on natural language and the possibility of learning such representations from data; and whether we need these formal representations to support reasoning or there are other alternative ideas. For the multimodality aspect, answers to questions such as the following will be discussed: (1) Which representations are appropriate for different modalities and which ones are modality independent?  (2) How can we exploit visual information for spatial language learning and reasoning?  All related applications are welcome, including text to scene conversion, spatial and visual question answering, spatial understanding in multimodal setting for robotics and navigation tasks and language grounding.  The workshop aims to encourage discussions across fields dealing with spatial language along with other modalities.  The desired outcome is identification of shared as well as unique challenges, problems and future directions across the fields and various application domains related to spatial language understanding.
+</p>
+
+<p>The specific topics include but are not limited to: </p>
+
+<ul>
+
+<li> Spatial meaning representations, continuous representations, ontologies, annotation schemes, linguistic corpora</li>
+<li>Spatial information extraction from natural language</li>
+<li>Spatial information extraction in robotics,  multimodal environments, navigational instructions</li>
+<li>Text mining for  spatial information in GIS  systems, geographical knowledge graphs</li>
+<li>Spatial question answering, spatial information for visual question answering</li>
+<li>Quantitative and qualitative reasoning with spatial information</li>
+<li>Spatial reasoning based on natural language or multimodal  information  (vision  and  language)</li>
+<li>Extraction  of  spatial  common  sense  knowledge</li>
+<li>Visualization of spatial language in 2-D and 3-D</li>
+<li>Spatial natural language generation</li>
+<li>Grounded spatial language and dialogue systems</li>
+
+</ul>
+
+<a id="invitedSpeakers" class="anchor" href="#invitedSpeakers" aria-hidden="true"><span class="octicon octicon-link"></span></a><h2>Invited Speakers</h2>
+
+<ul>
+<li> 
+   <font size="3" color="black"><b><a href="https://yoavartzi.com">Yoav Artzi</a>, Cornell University</b></font></li> 
+
+<li>
+   <font size="3" color="black"><b><a href="http://juliahmr.cs.illinois.edu">Julia Hockenmaier</a>, University of Illinois at Urbana-Champaign</b></font></li> 
+
+<li> 
+   <font size="3" color="black"><b><a href="https://douwekiela.github.io">Douwe Kiela</a>, Facebook</b></font></li> 
+
+<li>
+   <font size="3" color="black"><b><a href="http://jamespusto.com">James Pustejovsky</a>, Brandeis University</b></font></li>
+
+<li>More to be announced</li>
+</ul>
+
+<a id="submission-info" class="anchor" href="#submission-info" aria-hidden="true"><span class="octicon octicon-link"></span></a>
+<h2>Submissions</h2>
+
+The following will be modified as more information is available: We encourage contributions with either a technical paper (NAACL style, 8 pages without references), a position statement (NAACL style, 4 pages maximum) or an abstract of a published work. NAACL Style files available <a href="http://naacl2018.org/call_for_paper.html">here</a>. Please make submissions via Softconf <a href= "https://www.softconf.com/naacl2018/SpLU18/">here</a>.
+
+ <a id="important-dates" class="anchor" href="#accepted-papers" aria-hidden="true"><span class="octicon octicon-link"></span></a><h2>Important Dates</h2>
+ <ul>
+  <li>Submission Deadline: TBA</li>
+  <li>Notification: TBA</li>
+  <li>Camera Ready deadline: TBA</li>
+  <li>Workshop Day: November 12/13, 2020</li>
+ </ul>
+ 
+<a id="schedule" class="anchor" href="#schedule" aria-hidden="true"><span class="octicon octicon-link"></span></a>
+
+<a id="schedule" class="anchor" href="#schedule" aria-hidden="true"><span class="octicon octicon-link"></span></a><h2>Schedule
+<a href="https://aclanthology.info/volumes/proceedings-of-the-third-international-workshop-on-spatial-language-understanding"> (Proceedings)</a>
+</h2>
+
+<h2>Accepted Papers</h2>
+
+<a id="organizers" class="anchor" href="#organizers" aria-hidden="true"><span class="octicon octicon-link"></span></a>
+
+<h2>Organizing Committee</h2>
+
+<table cellspacing="0" cellpadding="0" style="width:100%">
+<tr>
+<td><li><a href="https://www.cs.rutgers.edu/students/malihe-alikhani">Malihe Alikhani</a></li></td>
+<td>Rutgers University</td>
+<td>ma1195@cs.rutgers.edu</td>
+</tr>
+
+<tr>
+<td><li><a href="http://www.jasonbaldridge.com">Jason Baldridge</a></li></td>
+<td>Google</td>
+<td>jasonbaldridge@google.com</td>
+</tr>
+
+<tr>
+<td><li><a href="http://www.cs.unc.edu/~mbansal/">Mohit Bansal</a></li></td>
+<td>UNC Chapel Hill</td>
+<td>mbansal@cs.unc.edu</td>
+</tr>
+
+<tr>
+<td><li><a href="https://www.ihmc.us/groups/abhatia/">Archna Bhatia</a></li></td>
+<td>IHMC</td>
+<td>abhatia@ihmc.us</td>
+</tr>
+
+<tr>
+<td><li><a href="http://www.cse.msu.edu/~kordjams/">Parisa Kordjamshidi</a></td>
+<td>Michigan State University</td>
+<td>kordjams@msu.edu</td>
+</tr>
+
+<tr>
+<td><li><a href="https://people.cs.kuleuven.be/~sien.moens/"> Marie-Francine Moens</a> </li></td>
+<td>KU Leuven</td>
+<td>sien.moens@cs.kuleuven.be</td> 
+</tr>
+
+</table>
+
+<a id="program-commitee" class="anchor" href="#program-commitee" aria-hidden="true"><span class="octicon octicon-link"></span></a>
+
+<h2>Program Committee</h2>
+<div>
+<table cellspacing="0" cellpadding="0" float="left">
+
+<tr><td><li>Steven Bethard</td><td> The University of Arizona</td></li></tr>
+<tr><td><li>Raffaella Bernardi</td><td>University of Trento</td></li></tr>
+<tr><td><li>Mehul Bhatt</td><td>Örebro University, University of Bremen</li></td></tr>
+<tr><td><li>Yonatan Bisk</td> <td>University of Washington</li></td></tr>
+<tr><td><li>Johan Bos</td><td>University of Groningen</li></td></tr>
+<tr><td><li>Joyce Chai</td><td>Michigan State University</li></td></tr>
+<tr><td><li>Angel Xuan Chang</td><td>Stanford University</li></td></tr>
+<tr><td><li>Anthony Cohn</td><td>University of Leeds</li></td></tr>
+<tr><td><li>Guillem Collell</td><td>KU Leuven</li></td></tr>
+<tr><td><li>Simon Dobnik</td><td>University of Gothenburg</li></td></tr>
+<tr><td><li>Bonnie Dorr</td><td>IHMC</li></td></tr>
+<tr><td><li>Ekaterina Egorova</td><td>University of Zurich</li></td></tr>
+<tr><td><li>Zoe Falomir</td><td>Universitat Bremen</li></td></tr>
+<tr><td><li>Julia Hockenmaier</td><td>University of Illinois at Urbana-Champaign</li></td></tr>
+<tr><td><li>Bruno Martins</td><td>University of Lisbon</li></td></tr>
+<tr><td><li>Srini Narayanan</td><td>Google Inc.</li></td></tr>
+<tr><td><li>Mari Broman Olsen</td><td>Microsoft</li></td></tr>
+<tr><td><li>Martijn van Otterlo</td><td>Vrije Universiteit Amsterdam</li></td></tr>
+<tr><td><li>Manolis Savva</td><td>Princeton University</li></td></tr>
+<tr><td><li>Jesse Thomason</td><td>University of Washington</li></td></tr>
+<tr><td><li>Clare Voss</td><td>ARL</li></td></tr>
+</table>
+</div>
 </section>
-
 
 <!-- Start of StatCounter Code for Default Guide -->
 <script type="text/javascript">
