removed old to be updated info from submission, updated Malihe's webpage

--- a/index.html
+++ b/index.html
@@ -128,8 +128,7 @@ Spatial  language  meaning  representation  includes  research  related  to  cog
 
 <a id="submission-info" class="anchor" href="#submission-info" aria-hidden="true"><span class="octicon octicon-link"></span></a>
 <h2>Submissions</h2>
-
-The following will be modified as more information is available: We encourage contributions with either a technical paper (NAACL style, 8 pages without references), a position statement (NAACL style, 4 pages maximum) or an abstract of a published work. NAACL Style files available <a href="http://naacl2018.org/call_for_paper.html">here</a>. Please make submissions via Softconf <a href= "https://www.softconf.com/naacl2018/SpLU18/">here</a>.
+TBA
 
  <a id="important-dates" class="anchor" href="#accepted-papers" aria-hidden="true"><span class="octicon octicon-link"></span></a><h2>Important Dates</h2>
  <ul>
@@ -153,7 +152,7 @@ The following will be modified as more information is available: We encourage co
 
 <table cellspacing="0" cellpadding="0" style="width:100%">
 <tr>
-<td><li><a href="https://www.cs.rutgers.edu/students/malihe-alikhani">Malihe Alikhani</a></li></td>
+<td><li><a href="https://alikhanimalihe.wixsite.com/mysite">Malihe Alikhani</a></li></td>
 <td>Rutgers University</td>
 <td>ma1195@cs.rutgers.edu</td>
 </tr>
