--- a/index.html
+++ b/index.html
@@ -72,22 +72,22 @@ Room: TBA
 <h2>Overview</h2>
 
 <p>
-Leveraging the foundation built in the prior workshops SPLU-RoboNLP 2019 and SpLU-2018, run by the organizers Parisa Kordjamshidi and Archna Bhatia (together with Marie-Francine Moens,  James Pustejovsky, James Allen, Bonnie Dorr, Jason Baldridge, Mohit Bansal, Yonatan Bisk, Jesse Thomason and  others),  and  focusing  on  the  gaps  identified  therein,  we  propose  the  third  workshop  on  Spatial Language Understanding.  One of the essential functions of natural language is to express spatial relationships between objects.  Spatial language understanding is useful in many reaserch areas and real-world applications including robotics, navigation, geographic information systems, traffic management, human-machine interaction, query answering and translation systems.  Compared to other semantically specialized linguistic tasks, standardizing tasks related to spatial language seem to be more challenging as  it  is  harder  to  obtain  an  agreeable  set  of  concepts  and  relationships  and  a  formal  spatial  meaning representation that is domain independent and that allows quantitative and qualitative reasoning.
+Leveraging the foundation built in the prior workshops SPLU-RoboNLP 2019 and SpLU-2018, run by the organizers Parisa Kordjamshidi and Archna Bhatia (together with Marie-Francine Moens,  James Pustejovsky, James Allen, Bonnie Dorr, Jason Baldridge, Mohit Bansal, Yonatan Bisk, Jesse Thomason and  others),  and  focusing  on  the  gaps  identified  therein,  we  propose  the  third  workshop  on  Spatial Language Understanding.  One of the essential functions of natural language is to express spatial relationships between objects.  Spatial language understanding is useful in many research areas and real-world applications including robotics, navigation, geographic information systems, traffic management, human-machine interaction, query answering and translation systems.  Compared to other semantically specialized linguistic tasks, standardizing tasks related to spatial language seem to be more challenging as  it  is  harder  to  obtain  an  agreeable  set  of  concepts  and  relationships  and  a  formal  spatial  meaning representation that is domain independent and that allows quantitative and qualitative reasoning.
 
-This has made research results on spatial language learning and reasoning diverse, task-specific and, to some extent, not comparable.  Attempts to arrive at a common set of basic concepts and relationships as well as making existing corpora inter-operable, however, can help avoid duplicated efforts within as well  as  across  fields  and  instead  focus  on  further  developments  in  the  respective  fields  for  automatic learning and reasoning.  Existing qualitative and quantitative representation and reasoning models can be used for investigation of interoperabiltiy of machine learning and reasoning over spatial semantics. Research endeavors in this area could provide insights into many challenges of language understanding in general.  Spatial semantics is also very well-connected and relevant to visualization of natural language and grounding language into perception,  central to dealing with configurations in the physical world and motivating a combination of vision and language for richer spatial understanding.  In the third round of the SpLU workshop, we will focus on the same major topics as:</p> 
+This has made research results on spatial language learning and reasoning diverse, task-specific and, to some extent, not comparable.  Attempts to arrive at a common set of basic concepts and relationships as well as making existing corpora inter-operable, however, can help avoid duplicated efforts within as well  as  across  fields  and  instead  focus  on  further  developments  in  the  respective  fields  for  automatic learning and reasoning.  Existing qualitative and quantitative representation and reasoning models can be used for investigation of interoperability of machine learning and reasoning over spatial semantics. Research endeavors in this area could provide insights into many challenges of language understanding in general.  Spatial semantics is also very well-connected and relevant to visualization of natural language and grounding language into perception,  central to dealing with configurations in the physical world and motivating a combination of vision and language for richer spatial understanding.  In the third round of the SpLU workshop, we will focus on the same major topics as:</p> 
 
 <ol>
 
-<li>Spatial languagemeaning representation (continuous, symbolic)</li>
+<li>Spatial language meaning representation (continuous, symbolic)</li>
 <li>Spatial language learning</li>
 <li>Spatial language reasoning</li>
 <li>Spatial Language Grounding and Combining vision and language</li>
-<li>Applications of Spatial Language Understanding: QA, dialouge systems, Navigation, etc.</li>
+<li>Applications of Spatial Language Understanding: QA, dialogue systems, Navigation, etc.</li>
 
 </ol>
 
 <p>
-Spatial  language  meaning  representation  includes  research  related  to  cognitive  and  linguistically motivated  spatial  semantic  representations, spatial  knowledge  representation  and spatial  ontologies, qualitative and quantitative representation models used for formal meaning representation, spatial annotation schemes and efforts for creating specialized corpora.  Spatial language learning considers both symbolic and sub-symbolic (with continious represetnations) techniques and computational models for spatial information extraction,  semantic parsing,  spatial co-reference within a global context that includes discourse and pragmatics from data or formal models. For the reasoning aspect, the workshop emphasizes the role of qualitative and quantitative formal representations in helping spatial reasoning based on natural language and the possibility of learning such representations from data; and whether we need these formal representations to support reasoning or there are other alternative ideas. For the multimodality aspect, answers to questions such as the following will be discussed: (1) Which representations are appropriate for different modalities and which ones are modality independent?  (2) How can we exploit visual information for spatial language learning and reasoning?  All related applications are welcome, including text to scene conversion, spatial and visual question answering, spatial understanding in multimodal setting for robotics and navigation tasks and language grounding.  The workshop aims to encourage discussions across fields dealing with spatial language along with other modalities.  The desired outcome is identification of shared as well as unique challenges, problems and future directions across the fields and various application domains related to spatial language understanding.
+Spatial  language  meaning  representation  includes  research  related  to  cognitive  and  linguistically motivated  spatial  semantic  representations, spatial  knowledge  representation  and spatial  ontologies, qualitative and quantitative representation models used for formal meaning representation, spatial annotation schemes and efforts for creating specialized corpora.  Spatial language learning considers both symbolic and sub-symbolic (with continuous representations) techniques and computational models for spatial information extraction,  semantic parsing,  spatial co-reference within a global context that includes discourse and pragmatics from data or formal models. For the reasoning aspect, the workshop emphasizes the role of qualitative and quantitative formal representations in helping spatial reasoning based on natural language and the possibility of learning such representations from data; and whether we need these formal representations to support reasoning or there are other alternative ideas. For the multi-modality aspect, answers to questions such as the following will be discussed: (1) Which representations are appropriate for different modalities and which ones are modality independent?  (2) How can we exploit visual information for spatial language learning and reasoning?  All related applications are welcome, including text to scene conversion, spatial and visual question answering, spatial understanding in multi-modal setting for robotics and navigation tasks and language grounding.  The workshop aims to encourage discussions across fields dealing with spatial language along with other modalities.  The desired outcome is identification of shared as well as unique challenges, problems and future directions across the fields and various application domains related to spatial language understanding.
 </p>
 
 <p>The specific topics include but are not limited to: </p>
@@ -96,15 +96,15 @@ Spatial  language  meaning  representation  includes  research  related  to  cog
 
 <li> Spatial meaning representations, continuous representations, ontologies, annotation schemes, linguistic corpora</li>
 <li>Spatial information extraction from natural language</li>
-<li>Spatial information extraction in robotics,  multimodal environments, navigational instructions</li>
+<li>Spatial information extraction in robotics,  multi-modal environments, navigational instructions</li>
 <li>Text mining for  spatial information in GIS  systems, geographical knowledge graphs</li>
 <li>Spatial question answering, spatial information for visual question answering</li>
 <li>Quantitative and qualitative reasoning with spatial information</li>
-<li>Spatial reasoning based on natural language or multimodal  information  (vision  and  language)</li>
+<li>Spatial reasoning based on natural language or multi-modal  information  (vision  and  language)</li>
 <li>Extraction  of  spatial  common  sense  knowledge</li>
 <li>Visualization of spatial language in 2-D and 3-D</li>
 <li>Spatial natural language generation</li>
-<li>Grounded spatial language and dialogue systems</li>
+<li>Grounded spatial language and dialog systems</li>
 
 </ul>
 
@@ -151,6 +151,20 @@ TBA
 <h2>Organizing Committee</h2>
 
 <table cellspacing="0" cellpadding="0" style="width:100%">
+
+ <tr>
+<td><li><a href="http://www.cse.msu.edu/~kordjams/">Parisa Kordjamshidi</a></td>
+<td>Michigan State University</td>
+<td>kordjams@msu.edu</td>
+</tr>
+ 
+ <tr>
+<td><li><a href="https://www.ihmc.us/groups/abhatia/">Archna Bhatia</a></li></td>
+<td>IHMC</td>
+<td>abhatia@ihmc.us</td>
+</tr>
+
+
 <tr>
 <td><li><a href="https://alikhanimalihe.wixsite.com/mysite">Malihe Alikhani</a></li></td>
 <td>Rutgers University</td>
@@ -167,18 +181,6 @@ TBA
 <td><li><a href="http://www.cs.unc.edu/~mbansal/">Mohit Bansal</a></li></td>
 <td>UNC Chapel Hill</td>
 <td>mbansal@cs.unc.edu</td>
-</tr>
-
-<tr>
-<td><li><a href="https://www.ihmc.us/groups/abhatia/">Archna Bhatia</a></li></td>
-<td>IHMC</td>
-<td>abhatia@ihmc.us</td>
-</tr>
-
-<tr>
-<td><li><a href="http://www.cse.msu.edu/~kordjams/">Parisa Kordjamshidi</a></td>
-<td>Michigan State University</td>
-<td>kordjams@msu.edu</td>
 </tr>
 
 <tr>
