updates the dates.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ href="stylesheets/github-light.css" media="screen">
 
       <h1 class="project-name">SpLU 2020</h1>
       <h2 class="project-tagline">Third International Workshop on Spatial Language Understanding</h2>
-<h2  class="project-tagline">In conjunction with The Conference on Empirical Methods in Natural Language Processing 2020 <a href="http://www.wikicfp.com/cfp/program?id=883">(EMNLP 2020)</a>, November 12/13, 2020, Barceló Bávaro Convention Centre, Dominican Republic. 
+<h2  class="project-tagline">In conjunction with The Conference on Empirical Methods in Natural Language Processing 2020 <a href="http://www.wikicfp.com/cfp/program?id=883">(EMNLP 2020)</a>, November 19/20, 2020, Barceló Bávaro Convention Centre, Dominican Republic. 
 <br>
 <br>
 Room: TBA
@@ -132,10 +132,10 @@ TBA
 
  <a id="important-dates" class="anchor" href="#accepted-papers" aria-hidden="true"><span class="octicon octicon-link"></span></a><h2>Important Dates</h2>
  <ul>
-  <li>Submission Deadline: TBA</li>
-  <li>Notification: TBA</li>
-  <li>Camera Ready deadline: TBA</li>
-  <li>Workshop Day: November 12/13, 2020</li>
+  <li>Submission Deadline: August 15th, 2020</li>
+  <li>Notification: September 29th, 2020</li>
+  <li>Camera Ready deadline: Oct 10, 2020</li>
+  <li>Workshop Day: November 19/20, 2020</li>
  </ul>
  
 <a id="schedule" class="anchor" href="#schedule" aria-hidden="true"><span class="octicon octicon-link"></span></a>
