Mari's affiliation updated

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@ We encourage contributions with technical papers (EMNLP style, 8 pages without r
 <tr><td><li>Julia Hockenmaier</td><td>University of Illinois at Urbana-Champaign</li></td></tr>
 <tr><td><li>Bruno Martins</td><td>University of Lisbon</li></td></tr>
 <tr><td><li>Srini Narayanan</td><td>Google Inc.</li></td></tr>
-<tr><td><li>Mari Broman Olsen</td><td>Microsoft</li></td></tr>
+<tr><td><li>Mari Broman Olsen</td><td>Lionbridge AI</li></td></tr>
 <tr><td><li>Martijn van Otterlo</td><td>Open University (The Netherlands)</li></td></tr>
 <tr><td><li>Manolis Savva</td><td>Stanford University</li></td></tr>
 <tr><td><li>Jesse Thomason</td><td>University of Washington</li></td></tr>
