Malihe info updated

--- a/index.html
+++ b/index.html
@@ -169,8 +169,8 @@ We encourage contributions with technical papers (EMNLP style, 8 pages without r
 
 <tr>
 <td><li><a href="https://alikhanimalihe.wixsite.com/mysite">Malihe Alikhani</a></li></td>
-<td>Rutgers University</td>
-<td>ma1195@cs.rutgers.edu</td>
+<td>University of Pittsburgh</td>
+<td>malihe@pitt.edu</td>
 </tr>
 
 <tr>
