--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@ We encourage contributions with technical papers (EMNLP style, 8 pages without r
 <tr><td><li>Steven Bethard</td><td> The University of Arizona</td></li></tr>
 <tr><td><li>Raffaella Bernardi</td><td>University of Trento</td></li></tr>
 <tr><td><li>Mehul Bhatt</td><td>Örebro University - CoDesign Lab</li></td></tr>
-<tr><td><li>Yonatan Bisk</td> <td>University of Washington</li></td></tr>
+<tr><td><li>Yonatan Bisk</td> <td>Carniege Mellon University</li></td></tr>
 <tr><td><li>Johan Bos</td><td>University of Groningen</li></td></tr>
 <tr><td><li>Joyce Chai</td><td>Michigan State University</li></td></tr>
 <tr><td><li>Angel Xuan Chang</td><td>Stanford University</li></td></tr>
