Chang affiliation updated

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@ We encourage contributions with technical papers (EMNLP style, 8 pages without r
 <tr><td><li>Yonatan Bisk</td> <td>Carniege Mellon University</li></td></tr>
 <tr><td><li>Johan Bos</td><td>University of Groningen</li></td></tr>
 <tr><td><li>Joyce Chai</td><td>Michigan State University</li></td></tr>
-<tr><td><li>Angel Xuan Chang</td><td>Stanford University</li></td></tr>
+<tr><td><li>Angel Xuan Chang</td><td>Simon Fraser University</li></td></tr>
 <tr><td><li>Anthony Cohn</td><td>University of Leeds</li></td></tr>
 <tr><td><li>Guillem Collell</td><td>KU Leuven</li></td></tr>
 <tr><td><li>Simon Dobnik</td><td>University of Gothenburg</li></td></tr>
