added Bonnie to speakers

--- a/index.html
+++ b/index.html
@@ -111,6 +111,9 @@ Spatial  language  meaning  representation  includes  research  related  to  cog
 <a id="invitedSpeakers" class="anchor" href="#invitedSpeakers" aria-hidden="true"><span class="octicon octicon-link"></span></a><h2>Invited Speakers</h2>
 
 <ul>
+  <li>
+   <font size="3" color="black"><b><a href="http://jamespusto.com">James Pustejovsky</a>, Brandeis University</b></font></li>
+
 <li> 
    <font size="3" color="black"><b><a href="https://yoavartzi.com">Yoav Artzi</a>, Cornell University</b></font></li> 
 
@@ -120,10 +123,8 @@ Spatial  language  meaning  representation  includes  research  related  to  cog
 <li> 
    <font size="3" color="black"><b><a href="https://douwekiela.github.io">Douwe Kiela</a>, Facebook</b></font></li> 
 
-<li>
-   <font size="3" color="black"><b><a href="http://jamespusto.com">James Pustejovsky</a>, Brandeis University</b></font></li>
 
-<li>More to be announced</li>
+<li> <font size="3" color="black"><b><a href="https://www.ihmc.us/groups/bdorr/"> Bonnie Dorr</a>, Florida Institute for Human and Machine Cognition</li>
 </ul>
 
 <a id="submission-info" class="anchor" href="#submission-info" aria-hidden="true"><span class="octicon octicon-link"></span></a>
