adde Lucian to PC

--- a/index.html
+++ b/index.html
@@ -203,16 +203,17 @@ We encourage contributions with technical papers (EMNLP style, 8 pages without r
 <tr><td><li>Steven Bethard</td><td> The University of Arizona</td></li></tr>
 <tr><td><li>Raffaella Bernardi</td><td>University of Trento</td></li></tr>
 <tr><td><li>Mehul Bhatt</td><td>Örebro University - CoDesign Lab</li></td></tr>
-<tr><td><li>Yonatan Bisk</td> <td>Carniege Mellon University</li></td></tr>
+<tr><td><li>Yonatan Bisk</td> <td>Carnegie Mellon University</li></td></tr>
 <tr><td><li>Johan Bos</td><td>University of Groningen</li></td></tr>
-<tr><td><li>Joyce Chai</td><td>Michigan State University</li></td></tr>
+<tr><td><li>Joyce Chai</td><td>University of Michigan</li></td></tr>
 <tr><td><li>Angel Xuan Chang</td><td>Simon Fraser University</li></td></tr>
 <tr><td><li>Anthony Cohn</td><td>University of Leeds</li></td></tr>
 <tr><td><li>Guillem Collell</td><td>KU Leuven</li></td></tr>
 <tr><td><li>Simon Dobnik</td><td>University of Gothenburg</li></td></tr>
-<tr><td><li>Bonnie Dorr</td><td>IHMC</li></td></tr>
+<!--<tr><td><li>Bonnie Dorr</td><td>IHMC</li></td></tr>-->
 <tr><td><li>Ekaterina Egorova</td><td>University of Zurich</li></td></tr>
 <tr><td><li>Zoe Falomir</td><td>Universitat Bremen</li></td></tr>
+<tr><td><li>Lucian Galescu</td>,<td> IHMC</td></li></td></tr>
 <tr><td><li>Bruno Martins</td><td>University of Lisbon</li></td></tr>
 <tr><td><li>Srini Narayanan</td><td>Google Inc.</li></td></tr>
 <tr><td><li>Mari Broman Olsen</td><td>Lionbridge AI</li></td></tr>
