--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ Room: TBA
 <h2>Overview</h2>
 
 <p>
-Leveraging the foundation built in the prior workshops SPLU-RoboNLP 2019 and SpLU-2018, run by the organizers Parisa Kordjamshidi and Archna Bhatia (together with Marie-Francine Moens,  James Pustejovsky, James Allen, Bonnie Dorr, Jason Baldridge, Mohit Bansal, Yonatan Bisk, Jesse Thomason and  others),  and  focusing  on  the  gaps  identified  therein,  we  propose  the  third  workshop  on  Spatial Language Understanding.  One of the essential functions of natural language is to express spatial relationships between objects.  Spatial language understanding is useful in many research areas and real-world applications including robotics, navigation, geographic information systems, traffic management, human-machine interaction, query answering and translation systems.  Compared to other semantically specialized linguistic tasks, standardizing tasks related to spatial language seem to be more challenging as  it  is  harder  to  obtain  an  agreeable  set  of  concepts  and  relationships  and  a  formal  spatial  meaning representation that is domain independent and that allows quantitative and qualitative reasoning.
+Leveraging the foundation built in the prior workshops SPLU-RoboNLP 2019 and SpLU-2018 and focusing  on  the  gaps  identified  therein,  we  propose  the  third  workshop  on  Spatial Language Understanding.  One of the essential functions of natural language is to express spatial relationships between objects.  Spatial language understanding is useful in many research areas and real-world applications including robotics, navigation, geographic information systems, traffic management, human-machine interaction, query answering and translation systems.  Compared to other semantically specialized linguistic tasks, standardizing tasks related to spatial language seem to be more challenging as  it  is  harder  to  obtain  an  agreeable  set  of  concepts  and  relationships  and  a  formal  spatial  meaning representation that is domain independent and that allows quantitative and qualitative reasoning.
 
 This has made research results on spatial language learning and reasoning diverse, task-specific and, to some extent, not comparable.  Attempts to arrive at a common set of basic concepts and relationships as well as making existing corpora inter-operable, however, can help avoid duplicated efforts within as well  as  across  fields  and  instead  focus  on  further  developments  in  the  respective  fields  for  automatic learning and reasoning.  Existing qualitative and quantitative representation and reasoning models can be used for investigation of interoperability of machine learning and reasoning over spatial semantics. Research endeavors in this area could provide insights into many challenges of language understanding in general.  Spatial semantics is also very well-connected and relevant to visualization of natural language and grounding language into perception,  central to dealing with configurations in the physical world and motivating a combination of vision and language for richer spatial understanding.  In the third round of the SpLU workshop, we will focus on the same major topics as:</p> 
 
@@ -124,7 +124,7 @@ Spatial  language  meaning  representation  includes  research  related  to  cog
    <font size="3" color="black"><b><a href="https://douwekiela.github.io">Douwe Kiela</a>, Facebook</b></font></li> 
 
 
-<li> <font size="3" color="black"><b><a href="https://www.ihmc.us/groups/bdorr/"> Bonnie Dorr</a>, Florida Institute for Human and Machine Cognition</li>
+<li> <font size="3" color="black"><b><a href="https://www.ihmc.us/groups/bdorr/"> Bonnie Dorr</a>, Florida Institute for Human and Machine Cognition </b></font></li>
 </ul>
 
 <a id="submission-info" class="anchor" href="#submission-info" aria-hidden="true"><span class="octicon octicon-link"></span></a>
@@ -193,7 +193,7 @@ We encourage contributions with technical papers (EMNLP style, 8 pages without r
 </tr>
 
 </table>
-
+Contact: <a href="mailto:"splu-2020@googlegroups.com">splu-2020@googlegroups.com</a>
 <a id="program-commitee" class="anchor" href="#program-commitee" aria-hidden="true"><span class="octicon octicon-link"></span></a>
 
 <h2>Program Committee</h2>
@@ -223,7 +223,10 @@ We encourage contributions with technical papers (EMNLP style, 8 pages without r
 <tr><td><li>Clare Voss</td><td>ARL</li></td></tr>
 </table>
 </div>
+*If you are interested in taking a more active part in the workshop, we also encourage you to apply to join the program committee and participate in reviewing submissions by Emailing the organizers at <a href="mailto:"splu-2020@googlegroups.com">splu-2020@googlegroups.com</a>. Please mention your prior reviewing experience and a link to your publication records.
+
 </section>
+
 
 <!-- Start of StatCounter Code for Default Guide -->
 <script type="text/javascript">
