PC-invite update

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@ Contact: <a href="mailto:"splu-2020@googlegroups.com">splu-2020@googlegroups.com
 <tr><td><li>Clare Voss</td><td>ARL</li></td></tr>
 </table>
 </div>
-*If you are interested in taking a more active part in the workshop, we also encourage you to apply to join the program committee and participate in reviewing submissions by Emailing the organizers at <a href="mailto:"splu-2020@googlegroups.com">splu-2020@googlegroups.com</a>. Please mention your prior reviewing experience and a link to your publication records.
+*If you are interested to join the program committee and participate in reviewing submissions please Email the organizers at <a href="mailto:"splu-2020@googlegroups.com">splu-2020@googlegroups.com</a>. Please mention your prior reviewing experience and a link to your publication records in your Email.
 
 </section>
 
