Add Kirk Roberts and Francis Ferraro in PC

--- a/index.html
+++ b/index.html
@@ -213,11 +213,13 @@ Contact: <a href="mailto:"splu-2020@googlegroups.com">splu-2020@googlegroups.com
 <!--<tr><td><li>Bonnie Dorr</td><td>IHMC</li></td></tr>-->
 <tr><td><li>Ekaterina Egorova</td><td>University of Zurich</li></td></tr>
 <tr><td><li>Zoe Falomir</td><td>Universitat Bremen</li></td></tr>
+<tr><td><li>Francis Ferraro</td><td>University of Maryland Baltimore</li></td></tr>
 <tr><td><li>Lucian Galescu</td>,<td> IHMC</td></li></td></tr>
 <tr><td><li>Bruno Martins</td><td>University of Lisbon</li></td></tr>
 <tr><td><li>Srini Narayanan</td><td>Google Inc.</li></td></tr>
 <tr><td><li>Mari Broman Olsen</td><td>Lionbridge AI</li></td></tr>
 <tr><td><li>Martijn van Otterlo</td><td>Open University (The Netherlands)</li></td></tr>
+<tr><td><li>Kirk Roberts</td><td>UT Health</li></td></tr>
 <tr><td><li>Manolis Savva</td><td>Stanford University</li></td></tr>
 <tr><td><li>Jesse Thomason</td><td>University of Washington</li></td></tr>
 <tr><td><li>Clare Voss</td><td>ARL</li></td></tr>
