--- a/index.html
+++ b/index.html
@@ -205,6 +205,7 @@ Contact: <a href="mailto:"splu-2020@googlegroups.com">splu-2020@googlegroups.com
 <tr><td><li>Mehul Bhatt</td><td>Örebro University - CoDesign Lab</li></td></tr>
 <tr><td><li>Yonatan Bisk</td> <td>Carnegie Mellon University</li></td></tr>
 <tr><td><li>Johan Bos</td><td>University of Groningen</li></td></tr>
+<tr><td><li>Asli Celikyilmaz</td>,<td>Microsoft Research</td></li></td></tr>
 <tr><td><li>Joyce Chai</td><td>University of Michigan</li></td></tr>
 <tr><td><li>Angel Xuan Chang</td><td>Simon Fraser University</li></td></tr>
 <tr><td><li>Anthony Cohn</td><td>University of Leeds</li></td></tr>
@@ -214,7 +215,8 @@ Contact: <a href="mailto:"splu-2020@googlegroups.com">splu-2020@googlegroups.com
 <tr><td><li>Ekaterina Egorova</td><td>University of Zurich</li></td></tr>
 <tr><td><li>Zoe Falomir</td><td>Universitat Bremen</li></td></tr>
 <tr><td><li>Francis Ferraro</td><td>University of Maryland Baltimore</li></td></tr>
-<tr><td><li>Lucian Galescu</td>,<td> IHMC</td></li></td></tr>
+<tr><td><li>Lucian Galescu</td>,<td>IHMC</td></li></td></tr>
+<tr><td><li>Lei Li</td>,<td>Bytedance</td></li></td></tr>
 <tr><td><li>Bruno Martins</td><td>University of Lisbon</li></td></tr>
 <tr><td><li>Srini Narayanan</td><td>Google Inc.</li></td></tr>
 <tr><td><li>Mari Broman Olsen</td><td>Lionbridge AI</li></td></tr>
