--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ We encourage contributions with technical papers (EMNLP style, 8 pages without r
 
  <a id="important-dates" class="anchor" href="#accepted-papers" aria-hidden="true"><span class="octicon octicon-link"></span></a><h2>Important Dates</h2>
  <ul>
-  <li>Submission Deadline: August 15th, 2020</li>
+  <li>Submission Deadline: <strike>August 15th</strike> August 21st, 2020</li>
   <li>Notification: September 29th, 2020</li>
   <li>Camera Ready deadline: Oct 10, 2020</li>
   <li>Workshop Day: November 19/20, 2020</li>
