Update PC information

--- a/index.html
+++ b/index.html
@@ -205,24 +205,28 @@ Contact: <a href="mailto:"splu-2020@googlegroups.com">splu-2020@googlegroups.com
 <tr><td><li>Mehul Bhatt</td><td>Örebro University - CoDesign Lab</li></td></tr>
 <tr><td><li>Yonatan Bisk</td> <td>Carnegie Mellon University</li></td></tr>
 <tr><td><li>Johan Bos</td><td>University of Groningen</li></td></tr>
-<tr><td><li>Asli Celikyilmaz</td>,<td>Microsoft Research</td></li></td></tr>
+<tr><td><li>Asli Celikyilmaz</td><td>Microsoft Research</li></td></tr>
 <tr><td><li>Joyce Chai</td><td>University of Michigan</li></td></tr>
 <tr><td><li>Angel Xuan Chang</td><td>Simon Fraser University</li></td></tr>
 <tr><td><li>Anthony Cohn</td><td>University of Leeds</li></td></tr>
 <tr><td><li>Guillem Collell</td><td>KU Leuven</li></td></tr>
 <tr><td><li>Simon Dobnik</td><td>University of Gothenburg</li></td></tr>
-<!--<tr><td><li>Bonnie Dorr</td><td>IHMC</li></td></tr>-->
+<tr><td><li>Bonnie J. Dorr</td><td>Institute for Human and Machine Cognition</li></td></tr>
 <tr><td><li>Ekaterina Egorova</td><td>University of Zurich</li></td></tr>
 <tr><td><li>Zoe Falomir</td><td>Universitat Bremen</li></td></tr>
 <tr><td><li>Francis Ferraro</td><td>University of Maryland Baltimore</li></td></tr>
-<tr><td><li>Lucian Galescu</td>,<td>IHMC</td></li></td></tr>
-<tr><td><li>Lei Li</td>,<td>Bytedance</td></li></td></tr>
+<tr><td><li>Lucian Galescu</td>,<td>Institute for Human and Machine Cognition</td></li></td></tr>
+<tr><td><li>Mehdi Ghanimifard</td>,<td>University of Gothenburg</td></li></td></tr>
+<tr><td><li>Julia Hockenmaier</td>,<td>University of Illinois at Urbana-Champaign</td></li></td></tr>
+<tr><td><li>Lei Li</td><td>Bytedance</li></td></tr>
 <tr><td><li>Bruno Martins</td><td>University of Lisbon</li></td></tr>
 <tr><td><li>Srini Narayanan</td><td>Google Inc.</li></td></tr>
 <tr><td><li>Mari Broman Olsen</td><td>Lionbridge AI</li></td></tr>
 <tr><td><li>Martijn van Otterlo</td><td>Open University (The Netherlands)</li></td></tr>
+<tr><td><li>Ian Perera</td>,<td>Institute for Human and Machine Cognition</td></li></td></tr>
 <tr><td><li>Kirk Roberts</td><td>UT Health</li></td></tr>
 <tr><td><li>Manolis Savva</td><td>Stanford University</li></td></tr>
+<tr><td><li>Kristin Stock</td><td>Massey University</li></td></tr>
 <tr><td><li>Jesse Thomason</td><td>University of Washington</li></td></tr>
 <tr><td><li>Clare Voss</td><td>ARL</li></td></tr>
 </table>
