Update OC affiliation

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@ We encourage contributions with technical papers (EMNLP style, 8 pages without r
  
  <tr>
 <td><li><a href="https://www.ihmc.us/groups/abhatia/">Archna Bhatia</a></li></td>
-<td>IHMC</td>
+<td>Institute for Human and Machine Cognition</td>
 <td>abhatia@ihmc.us</td>
 </tr>
 
