--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ Spatial  language  meaning  representation  includes  research  related  to  cog
    <font size="3" color="black"><b><a href="https://douwekiela.github.io">Douwe Kiela</a>, Facebook</b></font></li> 
 
 
-<li> <font size="3" color="black"><b><a href="https://www.ihmc.us/groups/bdorr/"> Bonnie Dorr</a>, Florida Institute for Human and Machine Cognition </b></font></li>
+<li> <font size="3" color="black"><b><a href="https://www.ihmc.us/groups/bdorr/"> Bonnie J. Dorr</a>, Florida Institute for Human and Machine Cognition </b></font></li>
 </ul>
 
 <a id="submission-info" class="anchor" href="#submission-info" aria-hidden="true"><span class="octicon octicon-link"></span></a>
