Add accepted papers info

--- a/index.html
+++ b/index.html
@@ -148,6 +148,16 @@ We encourage contributions with technical papers (EMNLP style, 8 pages without r
 </h2>
 
 <h2>Accepted Papers</h2>
+ <ul>
+  <li>An Element-wise Visual-enhanced BiLSTM-CRF Model for Location Name Recognition, Takuya Komada and Takashi Inui</li>
+  <li>BERT-based Spatial Information Extraction, Hyeong Jin Shin, Jeong Yeon Park, Dae Bum Yuk and Jae Sung Lee</li>
+  <li>A Cognitively Motivated Approach to Spatial Information Extraction, Chao Xu, Emmanuelle-Anna Dietz Saldanha, Dagmar Gromann and Beihai Zhou</li>
+  <li>They are not all alike: answering different spatial questions requires different grounding strategies, Alberto Testoni, Claudio Greco, Tobias Bianchi, Mauricio Mazuecos, Agata Marcante, Luciana Benotti and Raffaella Bernardi</li>
+  <li>Categorisation, Typicality and Object-Specific Features in Spatial Referring Expressions, Adam Richard-Bollans, Anthony Cohn and Lucía Gómez Álvarez</li>
+  <li>A Hybrid Deep Learning Approach for Spatial Trigger Extraction from Radiology Reports, Surabhi Datta and Kirk Roberts</li>
+  <li>Retouchdown: Releasing Touchdown on StreetLearn as a Public Resource for Language Grounding Tasks in Street View, Harsh Mehta, Yoav Artzi, Jason Baldridge, Eugene Ie and Piotr Mirowski</li>
+ </ul>
+
 
 <a id="organizers" class="anchor" href="#organizers" aria-hidden="true"><span class="octicon octicon-link"></span></a>
 
