Make aesthetic changes in Accepted papers section

--- a/index.html
+++ b/index.html
@@ -149,13 +149,13 @@ We encourage contributions with technical papers (EMNLP style, 8 pages without r
 
 <h2>Accepted Papers</h2>
  <ul>
-  <li><i>An Element-wise Visual-enhanced BiLSTM-CRF Model for Location Name Recognition</i>, Takuya Komada and Takashi Inui.</li>
-  <li><i>BERT-based Spatial Information Extraction</i>, Hyeong Jin Shin, Jeong Yeon Park, Dae Bum Yuk and Jae Sung Lee.</li>
-  <li><i>A Cognitively Motivated Approach to Spatial Information Extraction</i>, Chao Xu, Emmanuelle-Anna Dietz Saldanha, Dagmar Gromann and Beihai Zhou.</li>
-  <li><i>They are not all alike: answering different spatial questions requires different grounding strategies</i>, Alberto Testoni, Claudio Greco, Tobias Bianchi, Mauricio Mazuecos, Agata Marcante, Luciana Benotti and Raffaella Bernardi.</li>
-  <li><i>Categorisation, Typicality and Object-Specific Features in Spatial Referring Expressions</i>, Adam Richard-Bollans, Anthony Cohn and Lucía Gómez Álvarez.</li>
-  <li><i>A Hybrid Deep Learning Approach for Spatial Trigger Extraction from Radiology Reports</i>, Surabhi Datta and Kirk Roberts.</li>
-  <li><i>Retouchdown: Releasing Touchdown on StreetLearn as a Public Resource for Language Grounding Tasks in Street View</i>, Harsh Mehta, Yoav Artzi, Jason Baldridge, Eugene Ie and Piotr Mirowski.</li>
+  <li><b><i>An Element-wise Visual-enhanced BiLSTM-CRF Model for Location Name Recognition</i></b>, Takuya Komada and Takashi Inui.</li>
+  <li><b><i>BERT-based Spatial Information Extraction</i></b>, Hyeong Jin Shin, Jeong Yeon Park, Dae Bum Yuk and Jae Sung Lee.</li>
+  <li><b><i>A Cognitively Motivated Approach to Spatial Information Extraction</i></b>, Chao Xu, Emmanuelle-Anna Dietz Saldanha, Dagmar Gromann and Beihai Zhou.</li>
+  <li><b><i>They are not all alike: answering different spatial questions requires different grounding strategies</i></b>, Alberto Testoni, Claudio Greco, Tobias Bianchi, Mauricio Mazuecos, Agata Marcante, Luciana Benotti and Raffaella Bernardi.</li>
+  <li><b><i>Categorisation, Typicality and Object-Specific Features in Spatial Referring Expressions</i></b>, Adam Richard-Bollans, Anthony Cohn and Lucía Gómez Álvarez.</li>
+  <li><b><i>A Hybrid Deep Learning Approach for Spatial Trigger Extraction from Radiology Reports</i></b>, Surabhi Datta and Kirk Roberts.</li>
+  <li><b><i>Retouchdown: Releasing Touchdown on StreetLearn as a Public Resource for Language Grounding Tasks in Street View</i></b>, Harsh Mehta, Yoav Artzi, Jason Baldridge, Eugene Ie and Piotr Mirowski.</li>
  </ul>
 
 
