Add an invited speaker's abstract

--- a/invited_abstracts/dorr_abstract.html
+++ b/invited_abstracts/dorr_abstract.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>SpLU Invited speaker talk abstract (Bonnie Dorr) </title>
+<title>SpLU Invited speakers (Bonnie Dorr) </title>
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link
     href='http://fonts.googleapis.com/css?family=Open+Sans:400,700'
@@ -16,16 +16,16 @@ href="stylesheets/github-light.css" media="screen">
 
 <!-- Latest compiled and minified CSS -->
   </head>
-  <body>
+  
+<body>
 <section class="page-header">
-      <h1 class="project-name">SpLU 2020</h1>
-      <h2 class="info">Invited Speaker Talks</h2>
-      <h3 class="speaker">Bonnie Dorr</h3>
+      <h1 class="project-name">SpLU 2020 Invited Speakers</h1>
+      <h2 class="speaker">Bonnie Dorr</h2>
 </section>
 
 <section class="main-content">
 
-<h2>Abstract</h2>
+<h3>Abstract</h3>
 
 This talk presents a spatial representation, called lexical conceptual structure, consisting of predicates and spatially oriented arguments, and its use in AI applications.  A primary motivation for the use of this representation is its systematic mapping to syntactic structure, independent of whether the predicates represent literal (spatial) meanings or are metaphorical in nature. The representation has language-independent properties that enable its use for building lexical resources and also that support a range of multilingual applications. More recently, the representation and its associated lexical organization provides the foundation for an approach to social engineering active defense. Throughout the talk, examples are provided that illustrate a number of important properties of the representation: (1) incorporation of foundational elements of motion and location that carry over from the spatial domain to other domains; (2) compositional primitives and fields that enable the construction of new resources; and (3) language- and domain- independence that supports multilingual processing and development of new AI applications.
 
