--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ Spatial  language  meaning  representation  includes  research  related  to  cog
    <font size="3" color="black"><b><a href="https://douwekiela.github.io">Douwe Kiela</a>, Facebook. <a href="ADD URL">Talk Abstract</a>. <a href="ADD URL">Speaker Bio</a>.</b></font></li> 
 
 
-<li> <font size="3" color="black"><b><a href="https://www.ihmc.us/groups/bdorr/"> Bonnie J. Dorr</a>, Florida Institute for Human and Machine Cognition. <a href="invited_abstracts/dorr_abstract.html">Talk Abstract</a>. <a href="ADD URL">Speaker Bio</a>.</b></font></li>
+<li> <font size="3" color="black"><b><a href="https://www.ihmc.us/groups/bdorr/"> Bonnie J. Dorr</a>, Florida Institute for Human and Machine Cognition. <a href="invited_abstracts/dorr_abstract.html">Talk Abstract</a>. <a href="invited_bios/dorr_bio.html">Speaker Bio</a>.</b></font></li>
 </ul>
 
 <a id="submission-info" class="anchor" href="#submission-info" aria-hidden="true"><span class="octicon octicon-link"></span></a>
